# edgeai-deploy-benchmark

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  TASKS.md
.github/workflows/: cpp-ci.yml  python-ci.yml
configs/: benchmark_pc.json  benchmark_pc_three_backend.json  yolov5n_v7_inference.json
cpp/: CMakeLists.txt
cpp/apps/: benchmark_ncnn.cpp  benchmark_ort.cpp  ncnn_image.cpp  ncnn_model_smoke.cpp  ncnn_video.cpp  opencv_smoke.cpp  ort_image.cpp  ort_video.cpp  preprocess_probe.cpp
cpp/include/edgeai/backends/: ncnn_detector.hpp  ort_detector.hpp
cpp/include/edgeai/common/: benchmark.hpp  config.hpp  detection.hpp  postprocess.hpp  preprocess.hpp  video_pipeline.hpp  visualize.hpp
cpp/src/backends/: ncnn_detector.cpp  ort_detector.cpp
cpp/src/common/: benchmark.cpp  config.cpp  postprocess.cpp  preprocess.cpp  video_pipeline.cpp  visualize.cpp
cpp/tests/: test_benchmark.cpp  test_common.cpp  test_ncnn_detector.cpp  test_postprocess.cpp  test_video_pipeline.cpp
docs/: benchmark_methodology.md  model_contract.md  pc_stage_acceptance.md
models/yolov5n-v7.0/: manifest.json  ncnn_manifest.json  torchscript_manifest.json
python/apps/: benchmark_ort.py  ort_image.py  ort_tensor_baseline.py
python/edgeai_benchmark/: __init__.py  benchmark.py  model_contract.py  postprocess.py  preprocess.py  visualize.py
requirements/: pc-runtime.txt
results/acceptance/: cpp_ncnn_reference.json  cpp_ort_reference.json  python_ort_reference.json
results/benchmarks/: pc_cpp_ncnn.json  pc_cpp_ncnn_summary.csv  pc_cpp_ncnn_summary.json  pc_cpp_ort.json  pc_ort_summary.csv  pc_python_ort.json  pc_three_backend_cpp_ncnn.json  pc_three_backend_cpp_ort.json  pc_three_backend_python_ort.json  pc_three_backend_summary.csv  pc_three_backend_summary.json
results/evidence/002/: model_contract.json
results/evidence/003/: model_io.json  raw_tensor_stats.json
results/evidence/004/: python_ort_detections.json
results/evidence/005/: python_ort_replay.json  python_test_summary.json
results/evidence/006/: preprocess_alignment.json
results/evidence/007/: cpp_ort_detections.json  python_cpp_ort_comparison.json
results/evidence/008/: cpp_ort_video.json
results/evidence/009/: benchmark_validation.json
results/evidence/010/: ncnn_model_load.json  torchscript_validation.json
results/evidence/011/: cpp_ncnn_detections.json  cpp_ncnn_video.json  ncnn_benchmark_validation.json  ort_ncnn_comparison.json
results/evidence/012/: pc_acceptance.json  three_backend_benchmark_validation.json
scripts/: generate_pc_acceptance.py  inspect_onnx_contract.py  run_python_tests.py  validate_benchmark.py  validate_ncnn_conversion.py  validate_torchscript_conversion.py
tasks/: 000_pc_stage_execution_protocol.md  001_project_bootstrap.md  002_model_contract.md  003_python_ort_tensor_baseline.md  004_python_single_image_inference.md  005_python_tests_and_golden_result.md  006_cpp_common_preprocess.md  007_cpp_ort_single_image.md  008_cpp_ort_video.md  009_benchmark_framework.md  010_ncnn_model_conversion.md  011_cpp_ncnn_inference.md  012_pc_stage_acceptance.md
tests/fixtures/: python_ort_golden.json  reference_inputs.json
tests/python/: compare_detections.py  compare_preprocess.py  test_benchmark_stats.py  test_golden_detection.py  test_letterbox.py  test_model_contract.py  test_ncnn_manifest.py  test_ort_tensor_baseline.py  test_pc_acceptance.py  test_postprocess.py  test_python_single_image_cli.py  test_torchscript_manifest.py
